Fixed overlap issue on calendar

--- a/client/src/components/calendar/Calendar.css
+++ b/client/src/components/calendar/Calendar.css
@@ -29,6 +29,8 @@
     font: Medium 16px/15px Avenir Next;
     letter-spacing: 0px;
     opacity: 1;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .courseEventBar {
@@ -65,3 +67,4 @@
     font-size: 0.7em;
     line-height: 1px;
 }
+
